project completed finally

--- a/assets/scss/template/_color-theme.scss
+++ b/assets/scss/template/_color-theme.scss
@@ -258,10 +258,11 @@ body {
 			}
 			.personal-portfolio-right-inner-wrapper .counter-style-2.border-style.small-radious .count-number {
 				background-color: #ffffff;
-				color: #141414 !important;
-				span{
-					color: #141414 !important;
-				}
+				// color: #141414 !important;
+				// span{
+				// 	color: #141414 !important;
+				// }
+				color: white !important;
 			}
 			.experience-style-list .experience-list .resume-single-list .inner .heading {
 				border-bottom: 1px solid #e8e8e8;
