--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 Theme Name: Portfolio for All
 Theme URI: https://github.com/risalshahed/portfolio-for-all
 Author: Risal Shahed
-Author URI: https://linkedin.com/in/risal-shahed
+Author URI: https://risalshahed.com
 Description: A portfolio theme for all
-Version: 1.2
+Version: 1.3
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: portfolio-for-all
